ST-9253 Fixed jumping collapsible row at TaskList component

--- a/src/pages/ProjectPage/TaskList/TaskList.scss
+++ b/src/pages/ProjectPage/TaskList/TaskList.scss
@@ -35,3 +35,7 @@
     text-align: left;
   }
 }
+
+.forCollapse {
+  height: 160px;
+}
